Working fix pre merge
