# swagger_server/models/izlusci_async_body.py
@@ -14,7 +14,7 @@ class IzlusciAsyncBody(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, conllus: List[str]=None, prepovedane_besede: List[str]=None):  # noqa: E501
+    def __init__(self, conllus: List[str]=None, prepovedane_besede: List[str]=None, definicje: bool=False):  # noqa: E501
         """IzlusciAsyncBody - a model defined in Swagger
 
         :param conllus: The conllus of this IzlusciAsyncBody.  # noqa: E501
@@ -24,15 +24,18 @@ class IzlusciAsyncBody(Model):
         """
         self.swagger_types = {
             'conllus': List[str],
-            'prepovedane_besede': List[str]
+            'prepovedane_besede': List[str],
+            'definicije':bool
         }
 
         self.attribute_map = {
             'conllus': 'conllus',
-            'prepovedane_besede': 'prepovedaneBesede'
+            'prepovedane_besede': 'prepovedaneBesede',
+            'definicije':'definicije'
         }
         self._conllus = conllus
         self._prepovedane_besede = prepovedane_besede
+        self._definicije=definicje
 
     @classmethod
     def from_dict(cls, dikt) -> 'IzlusciAsyncBody':
@@ -44,6 +47,30 @@ class IzlusciAsyncBody(Model):
         :rtype: IzlusciAsyncBody
         """
         return util.deserialize_model(dikt, cls)
+
+
+
+    @property
+    def definicije(self) -> bool:
+        """Gets the conllus of this IzlusciSyncBody.
+
+
+        :return: The conllus of this IzlusciSyncBody.
+        :rtype: List[str]
+        """
+        return self._definicije
+
+    @definicije.setter
+    def definicije(self, definicije: bool):
+        """Sets the conllus of this IzlusciSyncBody.
+
+
+        :param conllus: The conllus of this IzlusciSyncBody.
+        :type conllus: List[str]
+        """
+
+        self._definicije = definicije
+
 
     @property
     def conllus(self) -> List[str]:
